--- a/src/Sandbox/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,7 @@
-Hello!
+{% extends "SandboxMainBundle:Default:layout.html.twig" %}
+
+{% block content %}
+{% render "symfony.cmf.navigation.controller:breadcrumbAction" with { 'url': url } %}
+{% render "cmf_sandbox.default:contentAction" with { 'url': url } %}
+{% render "symfony.cmf.navigation.controller:childlistAction" with { 'url': url } %}
+{% endblock %}
