adding a sandbox skeleton

--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "SymfonyCmfCoreBundle::skeleton.html.twig" %}
+{% extends "SandboxMainBundle::skeleton.html.twig" %}
 
 {% block content %}
 <div xmlns:sioc="http://rdfs.org/sioc/ns#"
