--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -2,3 +2,26 @@ div.inner > div > h1 {
     font-size: 200%;
     font-weight: bold;
 }
+
+#saveButton{
+    background: #222;
+    display: none;
+    /*display: inline-block;*/
+    padding: 5px 10px 6px;
+    color: #fff;
+    text-decoration: none;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+    position: relative;
+    cursor: pointer;
+    margin: 15px 0 0;
+}
+
+#saveButton:hover{
+    background-color: #111;
+    color: #fff;
+}
