Output Javascript files for VIE/Aloha bundle

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -13,4 +13,6 @@
 {% endblock %}
 
 {% block bottom_scripts %}
+    {{ parent() }}
+    {% render "LiipVieBundle:Vie:includeJSFiles" %}
 {% endblock %}
