--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
     {{ parent() }}
-    <div id="saveButton">
+    <div id="saveButton" class="hidden">
         Save
     </div>
 {% endblock %}
