Using button instead of div for the save button

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -7,9 +7,8 @@
 
 {% block content %}
     {{ parent() }}
-    <div id="savebutton" style="display:none;">
-        Save
-    </div>
+    <button id="savebutton">Save</button>
+
 {% endblock %}
 
 {% block bottom_scripts %}
