--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -5,16 +5,11 @@ div.inner > div > h1 {
 
 #savebutton{
     background: #222;
-    display: inline-block;
+    display: none;
     padding: 5px 10px 6px;
     color: #fff;
-    text-decoration: none;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
-    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-    border-bottom: 1px solid rgba(0,0,0,0.25);
     position: relative;
     cursor: pointer;
     margin: 15px 0 0;
