--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -3,6 +3,9 @@
 {% block includes %}
     {{ parent() }}
     <link href="/bundles/sandboxmain/css/style.css" media="screen" type="text/css" rel="stylesheet" />
+    {% stylesheets '@LiipVieBundle/Resources/public/hallo/Aristo/jquery-ui-1.8.7.custom.css' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
 {% endblock %}
 
 {% block content %}
