adjusting to new LiipVieBundle config options, using vie controller as service

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -16,5 +16,5 @@
 
 {% block bottom_scripts %}
     {{ parent() }}
-    {% render "LiipVieBundle:Vie:includeJSFiles" %}
+    {% render "liip_vie.viecontroller:includeJSFilesAction" %}
 {% endblock %}
