--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -5,6 +5,7 @@
     {% stylesheets  '@SandboxMainBundle/Resources/public/css/style.css'
                     '@LiipVieBundle/Resources/public/hallo/Aristo/jquery-ui-1.8.7.custom.css'
                     '@LiipVieBundle/Resources/public/css/hallo.css'
+                    '@LiipVieBundle/vendor/hallo/examples/overlay.css'
                     '@LiipVieBundle/vendor/hallo/examples/image.css'
     %}
         <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
