updating to symfony 2.0.4 and the latest LiipVieBundle and symfony-cmf

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -20,5 +20,5 @@
 
 {% block bottom_scripts %}
     {{ parent() }}
-    {% render "liip_vie.viecontroller:includeJSFilesAction" %}
+    {% render "liip_vie.controller.vie:includeJSFilesAction" %}
 {% endblock %}
