Add a top toolbar and update it when saving

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -3,6 +3,19 @@ div.inner > div h1 {
     font-weight: bold;
 }
 
+#userBar {
+    position: fixed;
+    width: 100%;
+    padding: 5px;
+    top: 0;
+    left: 0;
+    background-color: #515151;
+    color: #FFFFFF;
+    font-family: Helvetica;
+    font-size: 14px;
+    z-index: 500;
+}
+
 .articleContainer {
     position: relative;
 }
