A bit more style for the top save bar, and autosave

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -16,6 +16,11 @@ div.inner > div h1 {
     z-index: 500;
 }
 
+.saveButton {
+    padding: 2px;
+    margin-left: 2px;
+}
+
 .articleContainer {
     position: relative;
 }
