--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -13,7 +13,8 @@
 {% endblock %}
 
 {% block header %}
-    <div id="userBar"><div id="saveStatus">Nothing to Save</div>
+    <div id="userBar">
+        <div class="inner"><div id="saveStatus">Nothing to Save</div></div>
     </div>
     {{ parent() }}
 {% endblock %}
