--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -10,9 +10,10 @@
      <div class="hiddenfieldsContainer">
          <div class="hiddenfieldsToggle"></div>
          <div class="hiddenfields">
+            <div class="hiddenfieldsCloseButton"></div>
             <h2>Article settings</h2>
          </div>
-         <div class="hiddenfieldsClose"></div>
+         <div class="hiddenfieldsCloseCorner"></div>
      </div>
     {# end hide this if no permission to edit #}
     <h1 property="dcterms:title">{{ page.title }}</h1>
