--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -14,7 +14,7 @@
 
 {% block header %}
     <div id="userBar">
-        <div class="inner"><div id="saveStatus">Nothing to Save</div></div>
+        <div class="inner"><button class="saveButton">Saved</button></div>
     </div>
     {{ parent() }}
 {% endblock %}
