--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -9,46 +9,62 @@ div.inner > div h1 {
     padding: 5px;
     top: 0;
     left: 0;
-    background-color: #515151;
     color: #FFFFFF;
     font-family: Helvetica;
     font-size: 14px;
-    z-index: 500;
-    height: 20px;
-    line-height: 20px;
+    z-index: 550;
+    height: 22px;
+    line-height: 22px;
+    border-bottom: 1px solid #333;
+
+    background: #969696; /* Old browsers */
+    background: -moz-linear-gradient(top, #969696 0%, #515151 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#969696), color-stop(100%,#515151)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #969696 0%,#515151 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #969696 0%,#515151 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #969696 0%,#515151 100%); /* IE10+ */
+    background: linear-gradient(top, #969696 0%,#515151 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#969696', endColorstr='#515151',GradientType=0 ); /* IE6-9 */
 }
 
-.saveButton {
+#userBar .saveButton {
+    cursor: pointer;
     padding: 2px 4px;
     margin-left: 2px;
     border-radius: 3px;
     border: none;
-    background: -webkit-gradient(
-        linear, left top, left bottom,
-        from(#888888),
-        to(#4d4d4d));
-    -webkit-box-shadow:
-        0px 1px 3px rgba(000,000,000,0.5),
-        inset 0px 0px 2px rgba(255,255,255,0.3);
+
+    background: #c6c6c6; /* Old browsers */
+    background: -moz-linear-gradient(top, #c6c6c6 2%, #f7f7f7 50%, #e0e0e0 51%, #999999 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#c6c6c6), color-stop(50%,#f7f7f7), color-stop(51%,#e0e0e0), color-stop(100%,#999999)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* IE10+ */
+    background: linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c6c6c6', endColorstr='#999999',GradientType=0 ); /* IE6-9 */
 }
 
-.saveButtonActive {
+#userBar .saveButton:hover {
+    background: #999999; /* Old browsers */
+    background: -moz-linear-gradient(top, #999999 0%, #e0e0e0 49%, #f7f7f7 50%, #c6c6c6 98%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(49%,#e0e0e0), color-stop(50%,#f7f7f7), color-stop(98%,#c6c6c6)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* IE10+ */
+    background: linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#c6c6c6',GradientType=0 ); /* IE6-9 */
+}
+
+#userBar .saveButtonActive {
     background: -webkit-gradient(
         linear, left top, left bottom,
         from(rgb(054,184,214)),
         to(#32ADD1));
-    -webkit-box-shadow:
-        0px 1px 3px rgba(000,000,000,0.5),
-        inset 0px 0px 2px rgba(54,184,214,0.3);}
+}
 
-.saveButtonActive:hover {
-    background: -webkit-gradient(
-        linear, left top, left bottom,
-        from(#257c8f),
-        to(#32ADD1));
-    -webkit-box-shadow:
-        0px 1px 3px rgba(000,000,000,0.5),
-        inset 0px 0px 2px rgba(54,184,214,0.3);}}
+#userBar .saveButtonActive:hover {
+    background: -webkit-gradient(linear, left top, left bottom, from(#257c8f), to(#32ADD1));
+}
 
 .articleContainer {
     position: relative;
