--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block header %}
-    <div id="userBar">
+    <div id="userBar" style="display: none">
         <div class="inner"><button class="saveButton">Saved</button></div>
     </div>
     {{ parent() }}
@@ -27,6 +27,7 @@
     {% javascripts
                 '@SandboxMainBundle/Resources/public/js/hiddenfields.js'
                 '@SandboxMainBundle/Resources/public/js/savebutton.js'
+                '@SandboxMainBundle/Resources/public/js/userbar.js'
     %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
