--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -13,9 +13,9 @@
 {% endblock %}
 
 {% block header %}
-    <div id="userBar" style="display: none">
         <div class="inner"><button class="saveButton">Saved</button></div>
     </div>
+        <div id="userBar">
     {{ parent() }}
 {% endblock %}
 
