--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -6,16 +6,17 @@
      typeof="sioc:Post"
      about="{{ page.path }}"
      class="articleContainer">
-     {# hide this if no permission to edit #}
-     <div class="hiddenfieldsContainer">
-         <div class="hiddenfieldsToggle"></div>
-         <div class="hiddenfields">
-            <div class="hiddenfieldsCloseButton"></div>
-            <h2>Article settings</h2>
+
+     {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
+         <div class="hiddenfieldsContainer">
+             <div class="hiddenfieldsToggle"></div>
+             <div class="hiddenfields">
+                <div class="hiddenfieldsCloseButton"></div>
+                <h2>Article settings</h2>
+             </div>
+             <div class="hiddenfieldsCloseCorner"></div>
          </div>
-         <div class="hiddenfieldsCloseCorner"></div>
-     </div>
-    {# end hide this if no permission to edit #}
+    {% endif %}
     <h1 property="dcterms:title">{{ page.title }}</h1>
     <div property="sioc:content">
         {{ page.content|raw }}
