--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -17,7 +17,7 @@ div.inner > div h1 {
     font-family: Helvetica;
     font-size: 14px;
     z-index: 550;
-    height: 22px;
+    height: 25px;
     line-height: 22px;
     border-bottom: 1px solid #333;
     display: none;
@@ -38,37 +38,26 @@ div.inner > div h1 {
     margin-left: 2px;
     border-radius: 3px;
     border: none;
-
-    background: #c6c6c6; /* Old browsers */
-    background: -moz-linear-gradient(top, #c6c6c6 2%, #f7f7f7 50%, #e0e0e0 51%, #999999 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#c6c6c6), color-stop(50%,#f7f7f7), color-stop(51%,#e0e0e0), color-stop(100%,#999999)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* IE10+ */
-    background: linear-gradient(top, #c6c6c6 2%,#f7f7f7 50%,#e0e0e0 51%,#999999 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c6c6c6', endColorstr='#999999',GradientType=0 ); /* IE6-9 */
+    text-indent: 1000px;
+    overflow: hidden;
+    width: 70px;
+    height: 25px;
+    background: transparent url("/bundles/liipvie/img/saveButton.png") no-repeat 0 0;
 }
 
-#userBar .saveButton:hover {
-    background: #999999; /* Old browsers */
-    background: -moz-linear-gradient(top, #999999 0%, #e0e0e0 49%, #f7f7f7 50%, #c6c6c6 98%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(49%,#e0e0e0), color-stop(50%,#f7f7f7), color-stop(98%,#c6c6c6)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* IE10+ */
-    background: linear-gradient(top, #999999 0%,#e0e0e0 49%,#f7f7f7 50%,#c6c6c6 98%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#c6c6c6',GradientType=0 ); /* IE6-9 */
+#userBar .saveButtonSaving {
+    width: 100px;
+    background: transparent url("/bundles/liipvie/img/saveButton.png") no-repeat 0 -25px;
 }
 
 #userBar .saveButtonActive {
-    background: -webkit-gradient(
-        linear, left top, left bottom,
-        from(rgb(054,184,214)),
-        to(#32ADD1));
+    width: 95px;
+    line-height: 30px;
+    background: transparent url("/bundles/liipvie/img/saveButton.png") no-repeat 0 -50px;
 }
 
 #userBar .saveButtonActive:hover {
-    background: -webkit-gradient(linear, left top, left bottom, from(#257c8f), to(#32ADD1));
+    background-position: 0 -75px;
 }
 
 .articleContainer {
