--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -22,6 +22,7 @@
         {{ page.content|raw }}
     </div>
 </div>
+<div class="sidebar">Static Sidebar Content <img src="http://2.bp.blogspot.com/_M9KExL3ZWRM/SuIcfXUATHI/AAAAAAAAAHc/AeFJzszOnTw/s400/Totemcolorfulfaac4.jpg" /></div>
 {{ parent() }}
 {% endblock %}
 
