--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -17,7 +17,7 @@
              <div class="hiddenfieldsCloseCorner"></div>
          </div>
     {% endif %}
-    <h1 property="dcterms:title">{{ page.title }}</h1>
+    <h1 id="main_title" property="dcterms:title">{{ page.title }}</h1>
     <div property="sioc:content">
         {{ page.content|raw }}
     </div>
