--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -5,12 +5,13 @@ div.inner > div h1 {
 
 .articleContainer {
     float: left;
-    width: 710px;
+    width: 700px;
 }
 
 .sidebar {
     float: right;
     width: 250px;
+    margin-left: 10px;
 }
 
 [contenteditable] a {
