--- a/src/Sandbox/AdminBundle/Resources/views/CRUD/list.html.twig
+++ b/src/Sandbox/AdminBundle/Resources/views/CRUD/list.html.twig
@@ -1,9 +1,49 @@
 {% extends 'SonataAdminBundle:CRUD:list.html.twig' %}
 
-{% block side_menu %}
-
-    <div id="tree">Tree menu</div>
-
+{% block stylesheets %}
     {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('bundles/symfonycmftree/css/jquery.treeview.css') }}" type="text/css" media="all" />
+{% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles/symfonycmftree/js/jquery.cookie.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.edit.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/symfonycmftree/js/jquery.treeview.async.js') }}" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        function initTrees() {
+            $("#tree").treeview({
+                url:    "/children.php",
+                toggle: function() {
+                    $.ajax({
+                        url: "properties.php",
+                        dataType: "json",
+                        data: {
+                            root: this.id
+                        },
+                        success: function(response) {
+                            $("#properties").empty()
+                            $.each(response, function (index, property) {
+                                $("#properties").append(
+                                    '<tr><td>' + this.name + '</td><td>' + this.value + '</td></tr>'
+                                );
+                            });
+                        }
+                    });
+                }
+            })
+        }
+        $(document).ready(function(){
+            initTrees();
+
+        });
+    </script>
+
+{% endblock %}
+
+{% block side_menu %}
+    <div id="tree"></div>
+    {{ parent() }}
 {% endblock %}
