Added support for subjects

--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -1,8 +1,7 @@
 {% extends "SandboxMainBundle::skeleton.html.twig" %}
 
 {% block content %}
-<div xmlns:sioc="http://rdfs.org/sioc/ns#"
-     xmlns:dcterms="http://purl.org/dc/terms/"
+<div xmlns:sioc="http://rdfs.org/sioc/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:dcterms="http://purl.org/dc/terms/"
      typeof="sioc:Post"
      about="{{ page.path }}"
      class="articleContainer">
@@ -17,6 +16,11 @@
              <div class="hiddenfieldsCloseCorner"></div>
          </div>
     {% endif %}
+    <ul rel="dc:subject">
+        {% for subject in page.subjects %}
+        <li about="{{ subject|replace({'<': '', '>': ''}) }}">{{ subject }}</li>
+        {% endfor %}
+    </ul>
     <h1 id="main_title" property="dcterms:title">{{ page.title }}</h1>
     <div property="sioc:content">
         {{ page.content|raw }}
