Renamed to tags

--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -17,7 +17,7 @@
          </div>
     {% endif %}
     <ul rel="dc:subject">
-        {% for subject in page.subjects %}
+        {% for subject in page.tags %}
         <li about="{{ subject|replace({'<': '', '>': ''}) }}">{{ subject }}</li>
         {% endfor %}
     </ul>
