--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -103,18 +103,27 @@ div.inner > div h1 {
     background-color: black;
     width: 100%;
     display: none;
-    height: 100px;
     border-radius: 3px;
-    padding: 10px;
+    padding: 10px 10px 40px 10px;
+}
+
+.hiddenfields h2,
+.hiddenfields h3 {
+    color: #A0A0A0;
+    font-family: Helvetica, Arial;
+    font-weight: bold;
 }
 
 .hiddenfields h2 {
     background: url('/bundles/sandboxmain/images/settingsh2icon.png') no-repeat left center;
     padding-left: 22px;
     padding-bottom: 0;
-    color: #A0A0A0;
-    font-family: Helvetica, Arial;
     font-size: 15px;
+}
+
+.hiddenfields h3 {
+    font-size: 13px;
+    margin: 10px 0 4px 0;
 }
 
 .hiddenfieldsContainer {
@@ -127,9 +136,9 @@ div.inner > div h1 {
 .hiddenfieldsCloseCorner {
     background: url('/bundles/sandboxmain/images/cornerclose.png') no-repeat left bottom;
     width: 106px;
-    height: 92px;
+    height: 72px;
     position: absolute;
-    bottom: 0;
+    bottom: -10px;
     left: 0;
     display: none;
     cursor: pointer;
@@ -191,3 +200,78 @@ div.inner > div h1 {
     color: #ED671E;
     padding-bottom: 15px;
 }
+
+
+#articleTagsWrapper {
+    width: 400px;
+    margin-top: 20px;
+}
+
+.articleSuggestedTags {
+    margin-bottom: 10px;
+}
+
+div.tagsinput {
+    border: 0;
+    background: none;
+    width:300px;
+    height:auto;
+    overflow-y:auto;
+    padding:3px;
+}
+
+div.tagsinput span.tag {
+    border:1px solid #11a2bf;
+    -moz-border-radius:2px;
+    -webkit-border-radius:2px;
+    display:block;
+    float:left;
+    text-decoration:none;
+    background:#11accc;
+    color:#fff;
+    margin-right:5px;
+    margin-bottom:5px;
+    font-size:12px;
+    padding: 2px 4px;
+    cursor: pointer;
+}
+
+div.tagsinput span.tag a {
+    font-weight: bold;
+    color:#0b788e !important;
+    text-decoration:none;
+    font-size:13px;
+}
+
+div.tagsinput input,
+div.tagsinput input:focus {
+    width:80px;
+    font-size:12px;
+    border: 0 !important;
+    background:transparent !important;
+    color:#fff !important;
+    outline:0;
+    margin:0 5px 5px 0;
+    padding: 5px;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+div.tagsinput div {
+    display:block;
+    float:left;
+}
+
+.tags_clear {
+    clear:both;
+    width:100%;
+    height:0;
+}
+
+.not_valid {
+    background:#FBD8DB!important;
+    color:#90111A!important;
+}
+
+
