--- a/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/EditableStaticContent/index.html.twig
@@ -12,6 +12,20 @@
              <div class="hiddenfields">
                 <div class="hiddenfieldsCloseButton"></div>
                 <h2>Article settings</h2>
+                
+                <div id="articleTagsWrapper">
+                    <form>
+                        <div class="articleTags">
+                            <h3>Article tags</h3>
+                            <input id="articleTags" type="text" class="tags" value="" />
+                        </div>
+                        <div class="articleSuggestedTags">
+                            <h3>Suggested tags</h3>
+                            <input id="suggestedTags" type="text" class="tags" value="foo,bar,baz,roffle" />
+                        </div>
+                    </form>
+                    
+                </div>
              </div>
              <div class="hiddenfieldsCloseCorner"></div>
          </div>
