Added CSS for Link Panel

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -11,6 +11,7 @@
                     '@LiipVieBundle/Resources/public/css/halloLiipStyle.css'
                     '@LiipVieBundle/vendor/hallo/examples/overlay.css'
                     '@LiipVieBundle/vendor/hallo/examples/image.css'
+                    '@LiipVieBundle/Resources/halloplugins/link.css'
         %}
             <link rel="stylesheet" href="{{ asset_url }}" media="screen" type="text/css"/>
         {% endstylesheets %}
