--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -1,20 +1,63 @@
-html {
-    font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
+html{color:#000;background:#fff}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var,optgroup{font-style:inherit;font-weight:inherit}del,ins{text-decoration:none}li{list-style-type:square;margin-left:16px;}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:baseline}sub{vertical-align:baseline}legend{color:#000}input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit}input,button,textarea,select{*font-size:100%}
+body{background-color:#fff;color:#24272e}
+.offset,#skiplinks{position:absolute;left:-9000px}
+#header{position:relative;margin-bottom:20px;padding-top:25px;height:130px;}
+#header h1#logo-text a {
+    color: #8AB84B;
+    left: 55px;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    top: 20px;
+    font-size: 2.1em;
 }
-div.inner > div h1 {
-    font-size: 1.55em;
-    font-weight: bold;
+#header p#slogan {
+    color: #888;
+    font-size: 15px;
+    left: 150px;
+}
+#content{overflow:hidden;padding:10px 0;border-bottom:1px solid #e3e4e4;}
+#main{float:left;width:632px}
+#main #top{margin-bottom:34px}
+#main #bottom{overflow:hidden;margin:0 -24px 6px 0}
+#side{float:right;width:304px}
+#footer{background-color:#24272d;}
+#footer .inner{padding:32px 20px 20px}
+#header,.inner,#navigation {width:700px;margin-left:auto;margin-right:auto}
+h1, h2, h3 {font: normal 66px Georgia, serif;}
+#content h1 a,#content h2 a{text-decoration:none}
+h1{margin-top:20px;margin-bottom:5px;line-height:1.1;color:#8AB84B;font-size:2.3em;}h2{margin-top:15px;margin-bottom:10px;line-height:1.05;line-height:1.2;color:#666;font-size:1.8em;}h3{margin-bottom:8px;line-height:1.2;color:#5e6984;}
+#content h1 a:link,#content h1 a:visited,#content h2 a:link,#content h2 a:visited{color:inherit}
+#content h1 a:hover,#content h2 a:hover{color:#5e6984}
+#main p a{color:#24272e;-webkit-transition:color .2s linear}
+#main p a:hover{color:#5e6984}p{font-size:1em;line-height:1.4}strong{font-family:'Profile-Bold'}
+#logo{width:345px;height:62px;line-height:.6}
+#logo img{float:left;margin-right:17px}
+#logo span{font-size:.58em;color:#676758}
+#logo a{display:block;overflow:hidden;text-decoration:none}
+#main h1{border-bottom:1px solid #bec9d5}
+#main p{margin-bottom:12px}
+#main p img{padding:8px;background-color:#fff;-webkit-box-shadow:0 1px 5px #d8d8d8;-moz-box-shadow:0 1px 5px #d8d8d8;box-shadow:0 1px 5px #d8d8d8;margin:0 24px 24px 0}
+#main p img:hover{padding:7px;border:1px solid #c8c9cb}
+#footer{color:#fff}
+#footer p{font-size:1.04em;line-height:1.3;margin-bottom:10px}
+#footer p a:link,#footer p a:visited{color:#fff}
+#footer p a:link:hover,#footer p a:visited:hover{color:#a7a8ab}
+#footer .read_more{padding-left:10px;color:#fff;text-shadow:none;background-color:transparent;background-position:0 5px}
+#footer .read_more:hover{color:#a7a8ab;background-position:0 -15px}.article_info{margin:-5px 0 10px}
+#main ol li{list-style-type:decimal;list-style-position:inside}
+#main ul{margin:0 0 10px 20px}
+#main ul li{list-style-type:disc;list-style-position:inside}dt{font-weight:bold}
+#navigation{margin-bottom:5px}
+
+html {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 0.9em;
 }
 
 .articleContainer {
     float: left;
     width: 700px;
-}
-
-.sidebar {
-    float: right;
-    width: 250px;
-    margin-left: 10px;
 }
 
 [contenteditable] a {
@@ -182,24 +225,25 @@ div.inner > div h1 {
 }
 
 #navigation > ul {
-    position: absolute;
-    left: 20px;
-    top: 60px;
+    margin-top: 20px;
 }
 
 #navigation > ul > li {
-    list-style: none;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 #navigation > ul > li > ul > li {
     margin-left: 20px;
+    margin-top: 5px;
 }
 
-#main_title {
-    font-size: 30px;
-    color: #ED671E;
-    padding-bottom: 15px;
+#navigation a {
+    color: #2a7aa8;
+}
+
+#navigation .cmf-breadcrumb a {
+    color: #333;
+    text-decoration: none;
 }
 
 
