fixed design for tags

--- a/src/Sandbox/MainBundle/Resources/public/css/style.css
+++ b/src/Sandbox/MainBundle/Resources/public/css/style.css
@@ -60,6 +60,18 @@ html {
     width: 700px;
 }
 
+ul[rel="dc:subject"] {
+    display: none;
+}
+
+.cmf-childlist {
+    padding: 10px 0;
+}
+
+.cmf-childlist li{
+    padding-bottom: 5px;
+}
+
 [contenteditable] a {
     color: #00add2;
 }
